# terratorch-galileo

./: .gitignore  pyproject.toml
galileo/: collate_fns.py  galileo.py  loss.py  utils.py
galileo/data/: utils.py
galileo/data/earthengine/: eo.py
galileo/eval/: finetune.py  linear_probe.py  preprocess.py
galileo/eval/baseline_models/anysat/: cropharvest_eval.py
galileo/eval/baseline_models/presto/: cropharvest_eval.py  single_file_presto.py
galileo/eval/cropharvest/: cropharvest_eval.py
galileo/eval/datasets/: breizhcrops.py  geobench.py  sen1floods11.py
tests/: test_augmentation.py  test_config.py  test_cropharvest.py  test_data_utils.py  test_dataset.py  test_end_to_end.py  test_galileo.py  test_loss.py  test_masking.py
