[tool.ruff]
# Enable the isort rules.
lint.extend-select = ["I"]
line-length = 99
exclude = ["anysat"]

[tool.setuptools.packages.find]
include = ["galileo*"]

[project]
name = "galileo"
version = "0.1"
description = "A fork of Galileo, a family of pretrained remote sensing models, used to adapt it to be used together with TerraTorch"
license = { "text" = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "wandb>=0.16.3",
    "numpy>=1.26.4",
    "einops>=0.7.0",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "earthengine-api>=0.1.391",
    "rioxarray>=0.15.1",
    "rasterio>=1.3.10",
    "tqdm>=4.66.2",
    "geopandas>=0.14.3",
    "fiona>=1.9.6",
    "h5py>=3.10.0",
    "scikit-learn>=1.4.1.post1",
    "types-requests",
    "huggingface-hub>=0.30.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "matplotlib>=3.8.3",
]

eval = [
    "fast_pytorch_kmeans",
    "satlaspretrain-models",
    "timm",
    "breizhcrops",
]
